upload for mentor review; can't figure out to choose a character and assign it to this.sprite at line 93 of app.js

--- a/css/style.css
+++ b/css/style.css
@@ -21,6 +21,17 @@ p {
 	;
 }
 
+.diver {
+  margin: 10px;
+  max-width: 150%;
+  border: 5px solid transparent;
+}
+
+.diver:hover {
+  border-radius: 5px;
+  border: 5px solid #cccccc;
+}
+
 body {
     text-align: center;
 }
